# prompter

./: .gitignore  CLAUDE.md  Cargo.toml  INTEGRATION.md  PLAN.md  README.md  SPEC.md  TODOS.md
.cargo/: config.toml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: main.rs
crates/app/ui/: index.html  style.css
crates/core/: Cargo.toml
crates/core/src/: align.rs  audio.rs  coaching.rs  compliance.rs  error.rs  lib.rs  script.rs  transcribe.rs  vad.rs
crates/core/tests/: real_script_test.rs
crates/core/tests/fixtures/: mtm-consultation.script.md
scripts/: build.sh  gen-icon.py
