[package]
name = "prompter-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prompter — live script guidance for high-stakes conversations"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
prompter-core = { path = "../core", features = ["whisper"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
dirs-next = "2"
