[package]
name = "prompter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Script parser, alignment engine, and compliance tracker for Prompter"

[features]
default = ["audio"]
audio = ["dep:minutes-core"]
whisper = ["dep:whisper-rs", "audio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

# Audio via minutes-core (shared streaming API)
minutes-core = { path = "../../../minutes/crates/core", default-features = false, features = ["streaming"], optional = true }

# Whisper (for Tier 2 tracking — uses minutes-core's cpal under the hood)
whisper-rs = { version = "0.16", optional = true }

[dev-dependencies]
pretty_assertions = "1"
